tests/ui/const-generics/mgca/non-local-const-without-type_const.stderr
error: use of `const` in the type system without `#[type_const]`
  --> $DIR/non-local-const-without-type_const.rs:7:18
   |
LL |     let x = [(); non_local_const::N];
   |                  ^^^^^^^^^^^^^^^^^^
   |
   = note: only consts marked with `#[type_const]` may be used in types

error: aborting due to 1 previous error

